--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# version: '3.8' # Optional: Can be removed in newer Docker Compose versions
-
 services:
   backend:
     image: bhand247/backend:latest
@@ -30,6 +28,16 @@ services:
     networks:
       - app-network
 
+  jarvis:
+    image: bhand247/jarvis:latest
+    container_name: jarvis
+    ports:
+      - "8000:8000"
+    env_file:
+      - ./jarvis.env
+    networks:
+        - app-network
+        
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
