chore: update backend service name and add installation scripts

--- a/docker-compose-finvio.yml
+++ b/docker-compose-finvio.yml
@@ -24,7 +24,7 @@ services:
     env_file:
       - ./frontend.env
     depends_on:
-      - backend
+      - finvio-backend
     networks:
       - app-network
         
